<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView_carregando_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/carregando"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/textView_valor_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/r_0_00"
            android:textColor="@color/white"
            android:textSize="32sp" />


        <TextView
            android:id="@+id/textView_saldo_geral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/saldo_geral"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendarView_principal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:mcv_showOtherDates="all"
        app:mcv_selectionColor="@color/teal_700"
        app:mcv_tileSize="50dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.appcompat.widget.LinearLayoutCompat>